Use the Controller-Service architecture