@@ -1,4 +1,4 @@
-package org.mve.acm.services;
+package org.mve.acm.controller;
 
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
@@ -8,19 +8,23 @@ import net.mamoe.mirai.event.events.GroupMessageEvent;
 import net.mamoe.mirai.message.data.MessageContent;
 import net.mamoe.mirai.message.data.PlainText;
 import net.mamoe.mirai.message.data.SingleMessage;
+import org.mve.acm.services.ComparatorService;
+import org.mve.acm.services.Service;
+import org.mve.acm.services.codeforces.CodeforcesServiceContest;
+import org.mve.acm.services.codeforces.CodeforcesServiceHelp;
 import org.mve.collect.CollectorArray;
 import org.mve.invoke.common.JavaVM;
-import org.mve.mirai.Message;
 
 import java.io.FileInputStream;
 import java.io.InputStreamReader;
+import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Consumer;
 
-public class CodeforcesService implements Consumer<GroupMessageEvent>
+public class CodeforcesController implements Consumer<GroupMessageEvent>
 {
 	private static final String CODEFORCES_PROPERTIES_FILENAME = "codeforces.json";
 	private static final String PROPERTIES_KEY_ADMIN = "admin";
@@ -30,29 +34,43 @@ public class CodeforcesService implements Consumer<GroupMessageEvent>
 
 	private static final Set<Long> ADMINQQ = new HashSet<>();
 	private static final Set<Long> GROUPQQ = new HashSet<>();
+	private static final List<Service<GroupMessageEvent>> SERVICES = new ArrayList<>();
+
 	private static final String COMMAND_SYMBOL;
 	private static final String COMMAND_PREFIX;
+	public static final String CMD_HELP_0 = "?";
+	public static final String CMD_HELP_1 = "help";
+	public static final String CMD_CONTEST = "contest";
 
 	@Override
 	public void accept(GroupMessageEvent event)
 	{
-		if (CodeforcesService.GROUPQQ.contains(event.getGroup().getId()))
+		if (CodeforcesController.GROUPQQ.contains(event.getGroup().getId()))
 		{
-
 			// Filter MessageContent
-			List<SingleMessage> contentList = event.getMessage()
+			LinkedList<SingleMessage> contentList = event.getMessage()
 				.stream().filter(MessageContent.class::isInstance)
 				.collect(new CollectorArray<>(new LinkedList<>()));
-			System.out.println(contentList.getClass());
 
-			if (contentList.get(0).contentToString().startsWith(COMMAND_SYMBOL + COMMAND_PREFIX))
+			if (!contentList.isEmpty() && contentList.getFirst().contentToString().startsWith(COMMAND_SYMBOL + COMMAND_PREFIX))
 			{
-				String content = contentList.remove(0).toString();
+				String content = contentList.removeFirst().toString();
 				content = content.substring(COMMAND_SYMBOL.length() + COMMAND_PREFIX.length())
 					.stripLeading();
-				if (!content.isEmpty()) contentList.add(0, new PlainText(content));
-				// System.out.println(messageContent);
-				event.getSubject().sendMessage(Message.message(contentList));
+				if (content.isEmpty()) content = CMD_HELP_0;
+
+
+				for (int i = CodeforcesController.SERVICES.size(); i --> 0;)
+				{
+					Service<GroupMessageEvent> service = CodeforcesController.SERVICES.get(i);
+					if (content.startsWith(service.name))
+					{
+						content = content.substring(service.name.length())
+							.stripLeading();
+						contentList.addFirst(new PlainText(content));
+						service.service(event, contentList);
+					}
+				}
 			}
 		}
 	}
@@ -60,7 +78,7 @@ public class CodeforcesService implements Consumer<GroupMessageEvent>
 	static
 	{
 		JsonObject property = null;
-		try (FileInputStream propertyFile = new FileInputStream(CodeforcesService.CODEFORCES_PROPERTIES_FILENAME))
+		try (FileInputStream propertyFile = new FileInputStream(CodeforcesController.CODEFORCES_PROPERTIES_FILENAME))
 		{
 			InputStreamReader reader = new InputStreamReader(propertyFile);
 
@@ -78,17 +96,22 @@ public class CodeforcesService implements Consumer<GroupMessageEvent>
 		for (JsonElement jsonAdmin : jsonAdminArray)
 		{
 			long adminqq = jsonAdmin.getAsLong();
-			CodeforcesService.ADMINQQ.add(adminqq);
+			CodeforcesController.ADMINQQ.add(adminqq);
 		}
 		// Read group qq(s)
 		JsonArray jsonGroupArray = property.getAsJsonArray(PROPERTIES_KEY_GROUP);
 		for (JsonElement jsonAdmin : jsonGroupArray)
 		{
 			long groupqq = jsonAdmin.getAsLong();
-			CodeforcesService.GROUPQQ.add(groupqq);
+			CodeforcesController.GROUPQQ.add(groupqq);
 		}
 		// Read command settings
 		COMMAND_SYMBOL = property.get(PROPERTIES_KEY_CMDSYM).getAsString();
 		COMMAND_PREFIX = property.get(PROPERTIES_KEY_CMDPFX).getAsString();
+
+		SERVICES.add(new CodeforcesServiceHelp(CMD_HELP_0));
+		SERVICES.add(new CodeforcesServiceHelp(CMD_HELP_1));
+		SERVICES.add(new CodeforcesServiceContest(CMD_CONTEST));
+		SERVICES.sort(new ComparatorService<>());
 	}
 }
